@@ -99,3 +99,4 @@ Thanks to the following, who submitted detailed bug reports and excellent sugges
   varac
   xerus2000
   Rafael Oliveira
+  agentcoffee
