@@ -111,10 +111,20 @@ std::string intervalSummarize (const Rules& rules, const Interval& interval)
     // Interval open.
     if (interval.is_open ())
     {
-      out << "Tracking " << tags << '\n'
-          << "  Started " << interval.start.toISOLocalExtended () << '\n'
-          << "  Current " << minimalDelta (interval.start, Datetime ()) << '\n'
-          << "  Total   " << std::setw (19) << std::setfill (' ') << total.formatHours () << '\n';
+      auto now = Datetime ();
+
+      if (interval.start <= now )
+      {
+        out << "Tracking " << tags << '\n'
+            << "  Started " << interval.start.toISOLocalExtended () << '\n'
+            << "  Current " << minimalDelta (interval.start, now) << '\n'
+            << "  Total   " << std::setw (19) << std::setfill (' ') << total.formatHours () << '\n';
+      }
+      else
+      {
+        out << "Tracking " << tags << '\n'
+            << "  Starting " << interval.start.toISOLocalExtended () << '\n';
+      }
     }
 
     // Interval closed.
