@@ -17,6 +17,8 @@
 - #470    Do not leak filter in IntervalFilterFirstOf
           (thanks to Shaun Ruffel)
 - #474    Make display of ids and annotations in summary report configurable
+- #491    Tracking an interval in the future while actively tracking time results in a database inconsistency
+          (thanks to agentcoffee)
 
 ------ current release ---------------------------
 
